--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,16 +1,38 @@
-.login {
+.Login {
   align-items: center;
   display: flex;
-  height: 800px;
+  height: 100vh;
   justify-content: center;
-  width: 100%;
 }
 
-.form {
+.Login form {
   align-items: center;
-  border: 2px solid grey;
+  border: 1px solid black;
   display: flex;
+  flex-direction: column;
   height: 400px;
-  justify-content: center;
+  justify-content: space-evenly;
+  padding-block: 30px;
   width: 400px;
+}
+
+.Login label {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+
+.Login input {
+  height: 40px;
+  margin-top: 10px;
+  padding: 0 5px;
+}
+
+.Login button {
+  height: 40px;
+  width: 60%;
+}
+
+.Login button:enabled {
+  cursor: pointer;
 }
