--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -27,8 +27,8 @@
 .counter {
   align-items: center;
   background-color: var(--white);
-  border-radius: 50%;
   border: 3px var(--primary-no-gradient) solid;
+  border-radius: 50%;
   display: flex;
   height: 50px;
   justify-content: center;
@@ -75,8 +75,8 @@
 
 .answers-container button {
   background-color: var(--white);
-  border-radius: 10px;
   border: 3px solid var(--white);
+  border-radius: 10px;
   box-shadow: 0 3px 5px -3px rgb(1, 17, 29, 0.5);
   color: var(--black);
   font-size: 1em;
@@ -99,8 +99,8 @@
 
 .next-button {
   background: var(--primary);
-  border-radius: 20px;
   border: none;
+  border-radius: 20px;
   color: var(--white);
   cursor: pointer;
   font-weight: 500;
@@ -109,8 +109,8 @@
   padding: 0 50px;
 }
 
-@media only screen and ( min-width : 768px ) {
-  
+@media only screen and ( min-width : 764px ) {
+
   .question-container {
     height: 50%;
     position: relative;
@@ -118,6 +118,7 @@
   }
 
   .counter {
+    font-size: 1.3em;
     height: 70px;
     width: 70px;
   }
@@ -129,14 +130,13 @@
 
   .question-text {
     font-size: 1.4em;
-    padding: 20px 100px;
     margin: 0;
+    padding: 20px 100px;
   }
 
   .answers-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     justify-content: space-around;
   }
 
@@ -145,9 +145,20 @@
   }
 
   .answers-container button {
-    font-size: 1.2em;
+    align-items: center;
+    display: flex;
+    font-size: 1.1em;
     font-weight: 600;
     height: 80px;
+    justify-content: center;
+    margin-bottom: 40px;
+    padding: 20px;
     width: 44%;
+  }
+
+  .next-button {
+    font-size: 1em;
+    font-weight: 600;
+    width: 30%;
   }
 }
