--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -10,8 +10,8 @@ header {
 
 .header-picture {
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
 }
 
 .header-user {
@@ -20,7 +20,8 @@ header {
 }
 
 .header-name {
-  margin-left: 5px;
+  font-weight: 800;
+  margin-left: 10px;
 }
 
 .header-score-container {
