--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,19 +2,16 @@ body {
   background: var(--primary);
 }
 
-.Logo {
-  margin-bottom: 30px;
-}
-
-.logo-text {
-  font-size: 42px;
-}
-
 .Login {
   align-items: center;
   display: flex;
   height: 100vh;
   justify-content: center;
+  width: 100vw;
+}
+
+.Login .logo-text {
+  font-size: 2.5em;
 }
 
 .Login form {
@@ -24,22 +21,34 @@ body {
   box-shadow: 0 3px 10px -1px rgb(1, 17, 29, 0.5);
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 28em;
   justify-content: center;
-  padding: 30px 42px 40px;
-  width: 196px;
+  width: 80%;
 }
 
-.Login input {
+.Login div input {
   border-radius: 10px;
-  font-size: 16px;
-  height: 40px;
-  margin-bottom: 10px;
-  padding: 0 20px;
-  width: 156px;
+  font-size: 1em;
+  height: 2.8em;
+  margin-bottom: 0.6em;
+  padding: 0 1em;
+  width: 68%;
 }
 
-.Login div {
+.Login .input-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 2em;
+  width: 100%;
+}
+
+.Login .btn-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
 }
 
@@ -48,11 +57,11 @@ body {
   border-radius: 10px;
   box-shadow: 0 3px 10px -1px rgb(1, 17, 29, 0.5);
   color: var(--white);
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 700;
-  height: 50px;
-  margin-top: 10px;
-  width: 100%;
+  height: 3.2em;
+  margin-top: 0.6em;
+  width: 80%;
 }
 
 .Login button:disabled {
@@ -65,26 +74,28 @@ body {
 
 @media only screen and ( min-width : 864px ) {
 
-  .logo-text {
-    font-size: 52px;
+  .Login .logo-text {
+    font-size: 3.5em;
   }
 
   .Login form {
-    padding: 0 42px 20px;
-    width: 500px;
+    height: 26em;
+    width: 42em;
   }
 
   .Login input {
     width: 80%;
   }
 
-  .Login div {
+  .Login .btn-container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    width: 90%;
+    margin-bottom: 1em;
+    width: 74%;
   }
 
   .Login div button {
-    width: 220px;
+    width: 48%;
   }
 }
