--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,9 +1,6 @@
-body {
-  background: var(--primary);
-}
-
 .Login {
   align-items: center;
+  background: var(--primary);
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -21,25 +18,31 @@ body {
   box-shadow: 0 3px 10px -1px rgb(1, 17, 29, 0.5);
   display: flex;
   flex-direction: column;
-  height: 28em;
+  height: 30em;
   justify-content: center;
-  width: 80%;
+  width: 90%;
 }
 
 .Login div input {
+  border: 1px rgb(194, 194, 194) solid;
   border-radius: 10px;
   font-size: 1em;
-  height: 2.8em;
+  height: 50px;
   margin-bottom: 0.6em;
   padding: 0 1em;
   width: 68%;
+}
+
+.Login div input:focus {
+  outline: var(--primary-no-gradient) 2px solid;
 }
 
 .Login .input-container {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  height: 133px;
+  justify-content: space-between;
   margin-top: 2em;
   width: 100%;
 }
@@ -53,34 +56,42 @@ body {
 }
 
 .Login div button {
-  background-color: var(--secondary);
+  background: var(--primary);
+  border: none;
   border-radius: 10px;
-  box-shadow: 0 3px 10px -1px rgb(1, 17, 29, 0.5);
+  box-shadow: 0 3px 5px -3px rgb(1, 17, 29, 0.5);
   color: var(--white);
   font-size: 1em;
   font-weight: 700;
-  height: 3.2em;
+  height: 50px;
   margin-top: 0.6em;
   width: 80%;
 }
 
+
 .Login button:disabled {
-  opacity: 20%;
+  opacity: 0.4;
 }
 
 .Login button:enabled {
   cursor: pointer;
 }
 
+.Login div button:nth-of-type( 2 ) {
+  background: var(--light);
+  color: var(--black);
+}
+
 @media only screen and ( min-width : 864px ) {
 
   .Login .logo-text {
-    font-size: 3.5em;
+    font-size: 4.5em;
   }
 
   .Login form {
-    height: 26em;
-    width: 42em;
+    height: 27em;
+    padding: 30px 0;
+    width: 50%;
   }
 
   .Login input {
