--- a/src/css/Ranking.css
+++ b/src/css/Ranking.css
@@ -72,6 +72,7 @@ table {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   height: 100px;
+  margin-bottom: 100px;
   margin-top: 20px;
   overflow: auto;
   table-layout: fixed;
